# pydanticprotobuf

./: .coveragerc  .flake8  .pre-commit-config.yaml  README.md  person.proto  person_pb2.py  person_pb2.pyi  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: test.yaml
docs/: README.md
pydanticprotobuf/: __init__.py  const.py  main.py
scripts/: format.sh  generate-grpc-codes.sh  lint.sh  test.sh
tests/: conftest.py  test_conversion.py  test_version.py
tests/assets/: example_map_pb2.py  example_pb2.py
tests/protobuf/: examples.proto  examples_pb2.py  examples_pb2.pyi
