[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydanticprotobuf"
authors = [{name = "Anthony Corletti", email = "anthcor@gmail.com"}]
dynamic = ["version", "description"]
requires-python = ">=3.9.10"
dependencies = [
    "pydantic>=1.9.0",
    "grpcio>=1.44.0",
    "grpcio-tools>=1.44.0"
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.5",
    "mypy>=0.910",
    "mypy-protobuf>=3.0.0",
    "coverage>=6.1.1",
    "pytest-cov>=3.0.0",
    "google-cloud-container>=2.10.5"
]
dev = [
    "flake8>=3.9.2",
    "black>=22.1.0",
    "isort>=5.9.3",
    "autoflake>=1.4",
    "flake8-docstrings>=1.6.0",
    "types-protobuf>=3.19.12"
]

[tool.isort]
profile = "black"

[project.urls]
Documentation = "https://www.github.com/anthonycorletti/pydanticprotobuf"
