[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydanticprotobuf"
authors = [{name = "Anthony Corletti", email = "anthcor@gmail.com"}]
dynamic = ["version", "description"]
requires-python = ">=3.10.2"
dependencies = [
    "pydantic >=1.9.0",
    "protobuf <4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest >=6.2.5",
    "coverage >=6.1.1",
    "pytest-cov >=3.0.0"
]

dev = [
    "mypy >=0.910",
    "mypy-protobuf >=3.0.0",
    "flake8 >=3.9.2",
    "black >=22.1.0",
    "isort >=5.9.3",
    "autoflake >=1.4",
    "flake8-docstrings >=1.6.0",
    "types-protobuf >=3.19.12",
    "grpcio-tools >=1.46.0",
    "pre-commit >=2.19.0",
]

[tool.isort]
profile = "black"

[project.urls]
Documentation = "https://www.github.com/anthonycorletti/pydanticprotobuf"
